--- a/OneSheetHub/html/editmyprofile.html
+++ b/OneSheetHub/html/editmyprofile.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>รายละเอียดชีท | OneSheetHub</title>
-  <link rel="stylesheet" href="../css/sheetdetail.css">
+  <title>แก้ไขโปรไฟล์ | OneSheetHub</title>
+  <link rel="stylesheet" href="../css/editmyprofile.css">
+  <style>
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
-<body style="background: url('../pic/wallpaper1.png') no-repeat center center fixed; background-size: cover;">
+<body>
   <nav class="navbar">
     <div class="logo">
       <img src="../pic/placeholder.png" alt="OneSheetHub Logo" height="40">
@@ -26,19 +32,17 @@
         <span id="userEmail" style="visibility:hidden;opacity:0;position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);white-space:nowrap;background:#dac7f7;padding:4px 12px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.08);color:#6a1b9a;transition:opacity 0.3s,visibility 0.3s;">-</span>
       </div>
       <button id="logoutBtn" style="margin-left:12px;background:#e57373;color:#fff;border:none;border-radius:8px;padding:6px 16px;font-size:14px;cursor:pointer;">Logout</button>
-      <span class="icon">&#128100;</span>
     </div>
   </nav>
-  <main>
-    <div id="sheetLoading" style="display:flex;justify-content:center;align-items:center;margin:32px 0;">
-      <div class="spinner"></div>
+  <main style="display:flex;justify-content:center;align-items:center;min-height:80vh;padding:0 10vw;">
+    <div class="profile-card" style="max-width:400px;width:100%;margin:0 auto;padding:32px 24px;background:#fff;border-radius:16px;box-shadow:0 4px 24px rgba(92,84,163,0.10);display:flex;flex-direction:column;align-items:center;gap:18px;animation:fadeInUp 0.7s cubic-bezier(.4,1.4,.7,1) forwards;">
+      <img id="profileImg" src="../pic/placeholder.png" alt="Profile" style="width:100px;height:100px;border-radius:50%;object-fit:cover;border:3px solid #dac7f7;">
+      <input type="file" id="profileImgInput" accept="image/*" style="margin-bottom:12px;">
+      <input type="text" id="profileNameInput" placeholder="ชื่อใหม่" style="font-size:1.2em;font-weight:bold;text-align:center;width:80%;margin-bottom:12px;">
+      <button id="saveProfileBtn" style="background:#7c4dff;color:#fff;border:none;border-radius:8px;padding:8px 24px;font-size:16px;cursor:pointer;">บันทึก</button>
+      <button onclick="window.history.back()" type="button" style="background:#fff;color:#7c4dff;border:1px solid #7c4dff;border-radius:8px;padding:8px 24px;font-size:16px;cursor:pointer;margin-top:8px;">ย้อนกลับ</button>
     </div>
-    <div class="sheet-detail-container" id="sheetDetailContainer"></div>
-    <div style="text-align:center;margin-top:24px;">
-      <button onclick="window.history.back()" style="background:#fff;color:#7c4dff;border:1px solid #7c4dff;border-radius:8px;padding:8px 24px;font-size:18px;cursor:pointer;">ย้อนกลับ</button>
-    </div>
-    <!-- ปุ่มย้อนกลับจะถูกเพิ่มโดย JS หลังโหลดข้อมูล -->
-    <script type="module" src="../js/sheetdetail.js"></script>
+    <script type="module" src="../js/editmyprofile.js"></script>
   </main>
   <script>
     const emailCard = document.getElementById('emailCard');
@@ -62,9 +66,7 @@
       userEmail.style.visibility = 'hidden';
       userEmail.style.opacity = '0';
     };
-  </script>
-  <script type="module">
-    import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+
     const logoutBtn = document.getElementById('logoutBtn');
     if (logoutBtn) {
       logoutBtn.onclick = async () => {
