--- a/OneSheetHub/html/login.html
+++ b/OneSheetHub/html/login.html
@@ -6,24 +6,23 @@
   <title>เข้าสู่ระบบ | OneSheetHub</title>
   <link rel="stylesheet" href="../css/login.css">
 </head>
-<body>
+<body style="background: url('../pic/wallpaper1.png') no-repeat center center fixed; background-size: cover;">
   <nav class="navbar">
     <div class="logo">
-      <img src="../pic/logo2.png" alt="OneSheetHub Logo" height="40">
+      <img src="../pic/placeholder.png" alt="OneSheetHub Logo" height="40">
       <span>OneSheet<br>Hub</span>
     </div>
     <ul class="nav-links">
-      <li><a href="#" class="active">หน้าแรก</a></li>
       <li><a href="register.html">สมัครสมาชิก</a></li>
     </ul>
-  </nav>
+  </nav>  
   <main>
     <div class="login-container">
       <form class="login-form" id="loginForm">
         <h2>เข้าสู่ระบบ</h2>
         <div class="input-group">
           <span class="icon">👤</span>
-          <input type="text" id="loginEmail" placeholder="  อีเมล" required>
+          <input type="text" id="loginEmail" placeholder="อีเมล" required>
         </div>
         <div class="input-group">
           <span class="icon">🔒</span>
@@ -38,6 +37,11 @@
       </form>
     </div>
     <script type="module" src="../js/login.js"></script>
+    <script>
+      document.querySelector('.cancel').addEventListener('click', function() {
+        document.getElementById('loginForm').reset();
+      });
+    </script>
   </main>
 </body>
 </html>
