--- a/OneSheetHub/html/register.html
+++ b/OneSheetHub/html/register.html
@@ -6,15 +6,14 @@
   <title>สมัครสมาชิก | OneSheetHub</title>
   <link rel="stylesheet" href="../css/register.css">
 </head>
-<body>
+<body style="background: url('../pic/wallpaper1.png') no-repeat center center fixed; background-size: cover;">
   <nav class="navbar">
     <div class="logo">
-      <img src="../pic/logo2.png" alt="OneSheetHub Logo" height="40">
+      <img src="../pic/placeholder.png" alt="OneSheetHub Logo" height="40">
       <span>OneSheet<br>Hub</span>
     </div>
     <ul class="nav-links">
-      <li><a href="#">หน้าแรก</a></li>
-      <li><a href="#" class="active">สมัครสมาชิก</a></li>
+      <li><a href="login.html" class="active">เข้าสู่ระบบ</a></li>
     </ul>
   </nav>
   <main>
@@ -39,6 +38,12 @@
         </div>
       </form>
       <script type="module" src="../js/register.js"></script>
+      <script>
+        document.querySelector('.cancel').addEventListener('click', function() {
+          const form = document.querySelector('.register-form');
+          form.reset();
+        });
+      </script>
     </div>
   </main>
 </body>
