--- a/OneSheetHub/html/viewsheet.html
+++ b/OneSheetHub/html/viewsheet.html
@@ -9,20 +9,23 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="../pic/logo2.png" alt="OneSheetHub Logo" height="40">
+      <img src="../pic/placeholder.png" alt="OneSheetHub Logo" height="40">
       <span>OneSheet<br>Hub</span>
     </div>
     <ul class="nav-links">
       <li><a href="home.html">หน้าแรก</a></li>
-      <li><a href="#" class="active">ซื้อชีท</a></li>
-      <li><a href="#">ขายชีท</a></li>
-      <li><a href="#">ชีทฉัน</a></li>
-      <li><a href="#">โปรไฟล์</a></li>
+      <li><a href="viewsheet.html" class="active">ซื้อชีท</a></li>
+      <li><a href="upload.html">ขายชีท</a></li>
+      <li><a href="mysheet.html">ชีทฉัน</a></li>
+      <li><a href="myprofile.html">โปรไฟล์</a></li>
     </ul>
     <div class="user-info">
-      <span class="icon">&#128276;</span>
-      <span id="userEmail">-</span>
-      <span class="icon">&#128100;</span>
+      <div id="emailCard" style="display:inline-flex;align-items:center;gap:4px;width:64px;min-height:32px;transition:gap 0.3s, width 0.3s;position:relative;justify-content:center;background:#dac7f7;border-radius:16px;padding:4px 8px;overflow:hidden;">
+        <span class="icon" id="bellIcon" style="font-size:20px;transition:opacity 0.3s;">&#128276;</span>
+        <span class="icon" id="userIcon" style="font-size:20px;transition:opacity 0.3s;">&#128100;</span>
+        <span id="userEmail" style="visibility:hidden;opacity:0;position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);white-space:nowrap;background:#dac7f7;padding:4px 12px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.08);color:#6a1b9a;transition:opacity 0.3s,visibility 0.3s;">-</span>
+      </div>
+      <button id="logoutBtn" style="margin-left:12px;background:#e57373;color:#fff;border:none;border-radius:8px;padding:6px 16px;font-size:14px;cursor:pointer;">Logout</button>
     </div>
   </nav>
   <main>
@@ -72,5 +75,40 @@
     <!-- ปุ่มย้อนกลับจะถูกเพิ่มโดย JS หลังโหลดข้อมูล -->
     <script type="module" src="../js/viewsheet.js"></script>
   </main>
+  <script>
+  const emailCard = document.getElementById('emailCard');
+  const userEmail = document.getElementById('userEmail');
+  const bellIcon = document.getElementById('bellIcon');
+  const userIcon = document.getElementById('userIcon');
+
+  emailCard.onmouseenter = () => {
+    emailCard.style.gap = '0';
+    emailCard.style.width = '220px';
+    bellIcon.style.opacity = '0';
+    userIcon.style.opacity = '0';
+    userEmail.style.visibility = 'visible';
+    userEmail.style.opacity = '1';
+  };
+  emailCard.onmouseleave = () => {
+    emailCard.style.gap = '4px';
+    emailCard.style.width = '64px';
+    bellIcon.style.opacity = '1';
+    userIcon.style.opacity = '1';
+    userEmail.style.visibility = 'hidden';  
+    userEmail.style.opacity = '0';
+  };
+  </script>
+  <script type="module">
+import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+const logoutBtn = document.getElementById('logoutBtn');
+if (logoutBtn) {
+  logoutBtn.onclick = async () => {
+    const auth = getAuth();
+    await signOut(auth);
+    localStorage.clear();
+    window.location.href = 'login.html';
+  };
+}
+</script>
 </body>
 </html>
